--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,9 +8,284 @@
   <!-- css -->
   <link rel="stylesheet" href="./lib/css/style.css">
 </head>
-<body>
 
+<body>
+  <header class="main-header py-4">
+    <div class="container-fluid position-relative">
+      <h1 class="m-0 text-center">
+        <a href="">
+          <img src="./lib/images/logo.png" alt="">
+        </a>
+      </h1>
+      <nav class="position-absolute">
+        <ul class="list-group list-group-horizontal">
+          <li class="list-group-item border-0 text-vertical bg-transparent">
+            <a class="text-body" href="">ホーム</a>
+          </li>
+          <li class="list-group-item border-0 text-vertical bg-transparent">
+            <a class="text-body" href="">お品書き</a>
+          </li>
+          <li class="list-group-item border-0 text-vertical bg-transparent">
+            <a class="text-body" href="">店舗情報</a>
+          </li>
+          <li class="list-group-item border-0 text-vertical bg-transparent">
+            <a class="text-body" href="">アクセス</a>
+          </li>
+          <li class="list-group-item border-0 text-vertical bg-transparent">
+            <a class="text-body" href="">新着情報</a>
+          </li>
+          <li class="list-group-item border-0 text-vertical bg-transparent">
+            <a class="text-body" href="">求人情報</a>
+          </li>
+        </ul>
+      </nav>
+    </div>
+  </header>
+  <main>
+    <div class="home-mv position-relative">
+      <div class="container">
+        <div class="mv-slider">
+          <div><img class="img-fluid" src="./lib/images/mv_slide1.png" alt=""></div>
+          <div><img class="img-fluid" src="./lib/images/mv_slide2.png" alt=""></div>
+          <div><img class="img-fluid" src="./lib/images/mv_slide3.png" alt=""></div>
+          <div><img class="img-fluid" src="./lib/images/mv_slide4.png" alt=""></div>
+        </div>
+      </div>
+      <a class="text-body scroll-main smooth" href="#read">Scroll</a>
+    </div>
+    <section id="read" class="sec">
+      <div class="container">
+        <div class="row align-items-stretch">
+          <div class="col-md-5 order-md-last vertical-area">
+            <div class="text-vertical">
+              <h2 class="h3">おかえりなさい</h2>
+              <p>家のような落ち着き。
+                <br>故郷に帰ってきたような安心感。
+                <br>かげがえのないひと時を想い出の場所で
+                <br>大切な人と過ごす。
+                <br>瓢亭はそんな場所でありたい。</p>
+            </div>
+          </div>
+          <div class="col-md-7 order-md-first">
+            <div class="mb-2">
+              <img class="img-fluid" src="./lib/images/read_main.png" alt="">
+            </div>
+            <div class="d-md-flex justify-content-between align-items-start">
+              <div>
+                <img class="img-fluid" src="./lib/images/read_sub1.png" alt="">
+              </div>
+              <div class="mx-2">
+                <img class="img-fluid" src="./lib/images/read_sub2.png" alt="">
+              </div>
+              <div>
+                <img class="img-fluid" src="./lib/images/read_sub3.png" alt="">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="intoro" class="sec">
+      <div class="container position-relative">
+        <span class="bg-illust position-absolute">
+          <img src="./lib/images/bg_illust_1.png" alt="">
+        </span>
+        <span class="bg-illust position-absolute">
+          <img src="./lib/images/bg_illust_4.png" alt="">
+        </span>
+        <span class="bg-illust position-absolute">
+          <img src="./lib/images/bg_illust_2.png" alt="">
+        </span>
+        <div class="row align-items-stretch">
+          <div class="col-md-5 vertical-area">
+            <div class="text-vertical">
+              <h2 class="h3">ご縁を大切に</h2>
+              <p>語り継がれる瓢亭という想い出。
+                <br>受け継がれる瓢亭という場所。
+                <br>これから100年、200年つづく
+                <br>ご縁を大切にしていきたい。</p>
+            </div>
+          </div>
+          <div class="col-md-7">
+            <img class="img-fluid" src="./lib/images/intor_main.png" alt="">
+          </div>
+        </div>
+        <div class="d-md-flex justify-content-between align-items-center mt-3">
+          <div class="mr-md-3">
+            <img class="img-fluid" src="./lib/images/intor_sub1.png" alt="">
+          </div>
+          <div>
+            <img class="img-fluid" src="./lib/images/intor_sub2.png" alt="">
+          </div>
+        </div>
+      </div>
+    </section>
+    <div class="container">
+      <div id="carousel-suppon" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carousel-suppon" data-slide-to="0" class="active"></li>
+          <li data-target="#carousel-suppon" data-slide-to="1"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="./lib/images/suppon1.png" class="d-block w-100" alt="...">
+          </div>
+          <div class="carousel-item">
+            <img src="./lib/images/suppon2.png" class="d-block w-100" alt="...">
+          </div>
+        </div>
+      </div>
+    </div>
+    <section id="suppon" class="bg-dark text-white">
+      <div class="container">
+        <div class="row sec align-items-center">
+          <div class="col-md">
+            <h2 class="mb-0 h4">すっぽんといえば<br>創業1916年の姫路瓢亭</h2>
+          </div>
+          <div class="col-md">
+            <p class="mb-0">瓢亭のすっぽんスープは、
+              <br>ゆっくり・じっくり・愛情を込めて、８時間以上かけ、
+              <br>スープの素となる旨味を引き出した、
+              <br>濃い乳白色に濁ったスープになっています。
+              <br>他のお店では少なく、この濁りが瓢亭独自の旨味が
+              <br>凝縮されたスープなのです。</p>
+          </div>
+        </div>
+        <div class="row sec align-items-center">
+          <div class="col-md-5 order-md-last">
+            <img class="img-fluid" src="./lib/images/history_side.png" alt="">
+          </div>
+          <div class="col-md-7 order-md-first">
+            <h2 class="h4 mb-4">姫路瓢亭のすっぽん</h2>
+            <p>瓢亭名物のすっぽんは大分県の安心院で
+              <br>丹精込めて育ったものをご提供しております。
+              <br>すっぽんは神経質な性格で日光浴を好む生き物です。
+              <br>そんなすっぽんが過ごす最適な場所が
+              <br>静寂で日照のある温泉地です。 </p>
+            <p class="mb-0">その地で生まれた赤ちゃんのすっぽんには
+              <br>モーツワルトを聞かせるなど、我が子を育てる以上に
+              <br>愛情を込めた環境でストレスなくリラックスした状態で
+              <br>育ったすっぽんは、肉質も柔らかく、
+              <br>脂身も豊富に蓄えられるのです。</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="menu-shop">
+      <div class="container position-relative">
+        <span class="bg-illust position-absolute">
+          <img src="./lib/images/bg_illust_9.png" alt="">
+        </span>
+        <span class="bg-illust position-absolute">
+          <img src="./lib/images/bg_illust_8.png" alt="">
+        </span>
+        <div class="row align-items-stretch sec">
+          <div class="col-md-8 order-md-last">
+            <div id="carousel-menu" class="carousel slide" data-ride="carousel">
+              <ol class="carousel-indicators black">
+                <li data-target="#carousel-menu" data-slide-to="0" class="active"></li>
+                <li data-target="#carousel-menu" data-slide-to="1"></li>
+                <li data-target="#carousel-menu" data-slide-to="2"></li>
+              </ol>
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="./lib/images/slide_menu1.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="./lib/images/slide_menu2.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="./lib/images/slide_menu3.png" class="d-block w-100" alt="...">
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 order-md-first">
+            <div class="vertical-area h-100">
+              <div class="text-vertical">
+                <h3>お品書き</h3>
+                <p>当店自慢のすっぽん鍋やハモ鍋、
+                  <br>珍しいウツボ鍋、⿊⽑和⽜のお鍋など
+                  <br>多くの種類のお鍋を取り揃えています。
+                  <br>ぜひご賞味ください。</p>
+              </div>
+            </div>
+            <div class="position-relative text-center mt-n5">
+              <a class="btn btn-dark" href="">お品書き</a>
+            </div>
+          </div>
+        </div>
+        <div class="row align-items-stretch sec">
+          <div class="col-md-8">
+            <div id="carousel-shop" class="carousel slide" data-ride="carousel">
+              <ol class="carousel-indicators black">
+                <li data-target="#carousel-shop" data-slide-to="0" class="active"></li>
+                <li data-target="#carousel-shop" data-slide-to="1"></li>
+                <li data-target="#carousel-shop" data-slide-to="2"></li>
+              </ol>
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img src="./lib/images/slide_shop1.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="./lib/images/slide_shop2.png" class="d-block w-100" alt="...">
+                </div>
+                <div class="carousel-item">
+                  <img src="./lib/images/slide_shop3.png" class="d-block w-100" alt="...">
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="vertical-area h-100">
+              <div class="text-vertical">
+                <h3>店舗情報</h3>
+                <p>ゆったりできる個室を
+                  <br>6部屋ご用意しております。
+                  <br>活用シーンは様々で
+                  <br>接待や顔合わせ、お友達となど、
+                  <br>ぜひ瓢亭をご利用ください。 </p>
+              </div>
+            </div>
+            <div class="position-relative text-center mt-n5">
+              <a class="btn btn-dark" href="">店舗情報</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section id="recruit" class="sec position-relative">
+      <span class="bg-recruit"></span>
+      <div class="container position-relative">
+        <span class="bg-illust position-absolute">
+          <img src="./lib/images/bg_illust_7.png" alt="">
+        </span>
+        <div class="d-flex justify-content-between align-items-start mb-5">
+          <div>
+            <img class="img-fluid" src="./lib/images/staff1.png" alt="">
+          </div>
+          <div class="mx-2">
+            <img class="img-fluid" src="./lib/images/staff2.png" alt="">
+          </div>
+          <div>
+            <img class="img-fluid" src="./lib/images/staff3.png" alt="">
+          </div>
+        </div>
+        <div class="row align-items-center">
+          <div class="col-md">
+            <h3>求人情報</h3>
+            <p>瓢亭で1日体験をしてみませんか？</p>
+          </div>
+          <div class="col-md">
+            <a class="btn btn-dark mr-md-3" href="">スタッフインタビュー</a>
+            <a class="btn btn-dark" href="">体験概要</a>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
   <!-- script -->
   <script src="./lib/js/bundle.js" defer></script>
 </body>
+
 </html>
