--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="./lib/css/style.css">
 </head>
 
-<body>
+<body class="drawer drawer--right">
   <div id="loader"></div>
   <div id="app">
     <header class="main-header py-4">
@@ -19,7 +19,7 @@
             <img src="./lib/images/logo.png" alt="">
           </a>
         </h1>
-        <nav class="position-absolute">
+        <nav class="position-absolute d-md-block d-none">
           <ul class="list-group list-group-horizontal">
             <li class="list-group-item border-0 text-vertical bg-transparent">
               <a class="text-body" href="">ホーム</a>
@@ -40,6 +40,41 @@
               <a class="text-body" href="">求人情報</a>
             </li>
           </ul>
+        </nav>
+      </div>
+      <div class="drawer-wrap">
+        <button type="button" class="drawer-toggle drawer-hamburger">
+          <span class="drawer-hamburger-icon"></span>
+        </button>
+        <nav class="drawer-nav">
+          <div class="menu-left d-md-block d-none"></div>
+          <div class="menu-right text-center position-relative">
+            <div>
+              <a href="">
+                <img src="./lib/images/logo.png" alt="">
+              </a>
+            </div>
+            <div class="position-relative menu-wrap">
+              <ul class="drawer-menu text-vertical">
+                <li><a class="text-body" href="">ホーム</a></li>
+                <li><a class="text-body" href="">お品書き</a></li>
+                <li><a class="text-body" href="">店舗情報</a></li>
+                <li><a class="text-body" href="">アクセス</a></li>
+                <li><a class="text-body" href="">新着情報</a></li>
+                <li><a class="text-body" href="">求人情報</a></li>
+              </ul>
+            </div>
+            <div class="tel-wrap">
+              <p>ご予約はこちら</p>
+              <p class="m-0"><a class="tel text-body" href="tel:0792228180">Tel.079-222-8180</a></p>
+              <p class="small m-0">お電話での完全予約制となっております。</p>
+            </div>
+            <div class="sns">
+              <a class="text-body" href="https://www.facebook.com/himeji.hyotei/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+              <a class="text-body mx-3" href="https://www.instagram.com/hyoutei2/" target="_blank"><i class="fab fa-instagram"></i></a>
+              <a class="text-body" href="" target="_blank"><i class="fab fa-youtube"></i></a>
+            </div>
+          </div>
         </nav>
       </div>
     </header>
