--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
             </div>
             <div class="tel-wrap">
               <p>ご予約はこちら</p>
-              <p class="m-0"><a class="tel text-body" href="tel:0792228180">Tel.079-222-8180</a></p>
+              <p class="mb-md-0 mb-3"><a class="tel text-body" href="tel:0792228180">Tel.079-222-8180</a></p>
               <p class="small m-0">お電話での完全予約制となっております。</p>
             </div>
-            <div class="sns">
+            <div class="sns text-md-center text-right">
               <a class="text-body" href="https://www.facebook.com/himeji.hyotei/" target="_blank"><i class="fab fa-facebook-f"></i></a>
               <a class="text-body mx-3" href="https://www.instagram.com/hyoutei2/" target="_blank"><i class="fab fa-instagram"></i></a>
               <a class="text-body" href="" target="_blank"><i class="fab fa-youtube"></i></a>
