--- a/company.html
+++ b/company.html
@@ -209,7 +209,7 @@
       </section>
       <section class="sec">
         <div class="container">
-          <h3 class="h5 text-center pb-5">瓢亭で一日体験してみませんか？</h3>
+          <h3 class="h5 text-center pb-md-5 pb-4">瓢亭で一日体験してみませんか？</h3>
           <div class="text-center mt-5">
             <img class="img-fluid" src="./lib/images/recruit_main.png" alt="">
           </div>
